--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
       - name: Install dependencies
-        run: flutter pub get
+        run: dart pub get
       # Here you can insert custom steps you need
       # - run: dart tool/generate-code.dart
       - name: Publish
-        run: flutter pub publish --force
+        run: dart pub publish --force
