--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,26 @@
-# .github/workflows/publish.yml
-name: Publish to pub.dev
 
-on:
-  push:
-    tags:
-    - 'v[0-9]+.[0-9]+.[0-9]+*' # tag pattern on pub.dev: 'v{{version}'
+# name: Publish to pub.dev
 
-# Publish using custom workflow
-jobs:
-  publish:
-    permissions:
-      id-token: write # Required for authentication using OIDC
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v1
-      - name: Setup Flutter
-        run: |
-          git clone https://github.com/flutter/flutter.git --depth 1 -b stable
-          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
-      - name: Install dependencies
-        run: flutter pub get
-      # Here you can insert custom steps you need
-      # - run: dart tool/generate-code.dart
-      - name: Publish
-        run: dart pub publish --force
+# on:
+#   push:
+#     tags:
+#     - 'v[0-9]+.[0-9]+.[0-9]+*' 
+
+
+# jobs:
+#   publish:
+#     permissions:
+#       id-token: write
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: dart-lang/setup-dart@v1
+#       - name: Setup Flutter
+#         run: |
+#           git clone https://github.com/flutter/flutter.git --depth 1 -b stable
+#           echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
+#       - name: Install dependencies
+#         run: flutter pub get
+
+#       - name: Publish
+#         run: dart pub publish --force
