--- a/.github/workflows/respository_dispatch_test.yml
+++ b/.github/workflows/respository_dispatch_test.yml
@@ -8,5 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
+      - name: Dump client payload context
+        env:
+          PAYLOAD: ${{ toJson(github.event.client_payload) }}
+        run: echo "$PAYLOAD"
