--- a/.github/workflows/respository_dispatch_test.yml
+++ b/.github/workflows/respository_dispatch_test.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 20 # specify timeout for 20 minutes
     steps:
 
       - name: Send a Slack notification
